--- a/admin_login.html
+++ b/admin_login.html
@@ -11,8 +11,8 @@
                 extend: {
                     colors: {
                         primary: {
-                            DEFAULT: '#0d9488', // teal-600
-                            dark: '#0f766e'    // teal-700
+                            DEFAULT: '#4f46e5', // indigo-600
+                            dark: '#3730a3'    // indigo-800
                         }
                     }
                 }
@@ -20,17 +20,17 @@
         }
     </script>
 </head>
-<body class="bg-gradient-to-br from-gray-900 to-slate-800">
+<body class="bg-gradient-to-br from-slate-900 to-slate-800">
 
     <div class="flex min-h-screen items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
         <div class="bg-white p-8 md:p-10 rounded-xl shadow-2xl w-full max-w-md space-y-8">
             
             <div>
                 <h2 class="text-3xl font-bold text-center text-primary">
-                    Admin Lapor Pemkab
+                    Admin Panel
                 </h2>
                 <p class="mt-2 text-center text-sm text-slate-600">
-                    Silakan login untuk mengelola laporan
+                    Sistem Manajemen Laporan Pemkab
                 </p>
             </div>
             
@@ -60,7 +60,6 @@
                     </button>
                 </div>
             </form>
-
         </div>
     </div>
 
