--- a/admin_detail.html
+++ b/admin_detail.html
@@ -96,7 +96,7 @@
                         
                         <section>
                             <h3 class="text-xl font-semibold text-slate-800 border-b border-slate-200 pb-2 mb-4">Bukti dari Pelapor</h3>
-                            <img src="https://via.placeholder.com/400x250.png?text=Bukti+Lampu+Jalan+Mati" alt="Bukti dari pelapor" class="rounded-lg border border-slate-200 w-full max-w-lg">
+                            <img src="https://assets.promediateknologi.id/crop/0x0:0x0/0x0/webp/photo/riaupos/1772-18-lampu-jalan-mati-ft-evan.jpg" alt="Bukti dari pelapor" class="rounded-lg border border-slate-200 w-full max-w-lg">
                         </section>
                         
                         <section>
